fixed account detail bug not showing correct info

--- a/glamdefleurs_frontend/glamdefleurs/src/components/Pages/Profile/Profile.css
+++ b/glamdefleurs_frontend/glamdefleurs/src/components/Pages/Profile/Profile.css
@@ -74,6 +74,9 @@
     font-size: calc(var(--fs-body) * 0.8);
 }
 
+.profile-info-username{
+    margin-left: 20px;
+}
 /* sidebar */
 .profile-side{
     border: 3px solid var(--clr-hl1);
